k8s/ruoyi-v2/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ruoyi-backend
  namespace: ruoyi-v2
spec:
  selector:
    app: ruoyi-backend
  ports:
    - port: 48080
      targetPort: 48080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruoyi-backend
  namespace: ruoyi-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ruoyi-backend
  template:
    metadata:
      labels:
        app: ruoyi-backend
    spec:
      imagePullSecrets:
      - name: harbor-secret
      containers:
        - name: ruoyi-backend
          image: 172.16.6.4/group1/ruoyi_backend_zbj:ruoyi-v2
          imagePullPolicy: IfNotPresent
#          env: 
#          - name: MYSQL_HOST
#            value: mysql-0.mysql.ruoyi-v2.svc.cluster.local
          ports:
            - containerPort: 48080
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
