k8s/ruoyi-v2/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ruoyi-frontend
  namespace: ruoyi-v2
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: ruoyi-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruoyi-frontend
  namespace: ruoyi-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ruoyi-frontend
  template:
    metadata:
      labels:
        app: ruoyi-frontend
    spec:
      imagePullSecrets:
      - name: harbor-secret
      containers:
      - name: ruoyi-frontend
        image: 172.16.6.4/group1/ruoyi_frontend_zbj:v1
        ports:
        - containerPort: 80
        volumeMounts: 
        - name: ruoyi-conf-volume
          mountPath: /etc/nginx/conf.d/
      volumes:
      - name: ruoyi-conf-volume
        configMap:
          name: ruoyi-conf
          items:
          - key: ruoyi.conf
            path: ruoyi.conf
