k8s/ruoyi-v2/mysql-ha.yaml
---
# 2. Service：主从共用的无头 Service
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: ruoyi-v2
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
  - port: 3306
    name: mysql

---
# 3. StatefulSet：MySQL 主从（副本为 2，0 为主，1 为从）
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: ruoyi-v2
spec:
  serviceName: mysql
  replicas: 2
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
        - name: mysql-config-volume
          mountPath: /etc/mysql/conf.d
        - name: init-db-volume
          mountPath: /docker-entrypoint-initdb.d

      volumes:
      - name: mysql-config
        configMap:
          name: mysql-config
      - name: mysql-config-volume
        emptyDir: {}
      - name: init-db
        nfs:
          server: 172.16.6.106
          path: /root/data/init-db
      - name: init-db-volume
        emptyDir: {}
      terminationGracePeriodSeconds: 10

  volumeClaimTemplates:
  - metadata:
      name: mysql-data
      labels: 
        app: mysql
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: ruoyi-sc
      resources:
        requests:
          storage: 1Gi
#  - metadata:
#      name: init-db-volume
#      labels:
#        app: mysql
#    spec:
#      accessModes: ["ReadWriteOnce"]
#      storageClassName: ruoyi-sc
#      resources:
#        requests:
#          storage: 100Mi
