k8s/ruoyi-v2/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: ruoyi-v2
spec:
  clusterIP: None
  ports:
  - port: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: ruoyi-v2
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7.0-alpine
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-cache
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: redis-cache
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: ruoyi-sc
      resources:
        requests:
          storage: 500Mi
