k8s/ruoyi-v2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ruoyi-ingress
  namespace: ruoyi-v2
spec:
  ingressClassName: nginx
  rules:
  - host: ui.zbj.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ruoyi-frontend
            port:
              number: 80
  - host: java.zbj.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ruoyi-backend
            port:
              number: 48080
